[testing] add junit pioneer system property and environment variable modify demo