@@ -90,4 +90,21 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <!-- 覆盖 ../pom.xml 测试插件配置 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+          <argLine>
+            --add-opens="java.base/java.util=ALL-UNNAMED"
+            --add-opens="java.base/java.lang=ALL-UNNAMED"
+          </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
